tests/errors/generic-enum-null-coalescing-type.ari
fn main() -> i64 {
  let value = Some<i64>(1);
  return value ?? true;
}
